# carbonsteel

./: .gitignore  .gitmodules  BUILD.md  LICENSE  README.md  meson.build
example/: concept.cst  const.cst  example.2.cst  example.3.cst  example.4.cst  example.5.cst  example.cst  example.cst.c  example.fix.cst  example.old.cst  generics.cst  native_simple_test.cst  native_test.cst  tofix.cst
example/multifile/: a.cst  b.cst  d.cst
include/: ast.h  codegen.h  convert.h  copy.h  declaration.h  error.h  expression.h  list.h  stack.h  statement.h  type.h
include/ast/: declaration.h  lookup.h  root.h  search.h  type.h
include/ast/type/: check.h  primitive.h  resolve.h  type.h
include/codegen/: codegen.h
include/language/: context.h  lexer.h  parser.h
include/language/native/: declaration.h  lexer.h  parser.h  types.h
include/misc/: convert.h  error.h  list.h  memory.h  string.h  union.h
include/parser/: context.h  mlexerw.h
include/syntax/: predeclaration.h
include/syntax/declaration/: declaration.h
include/syntax/expression/: binary.h  complex.h  operator.h  primitive.h  properties.h  unary.h
include/syntax/expression/constant/: binary.h  core.h  size.h  transform.h
include/syntax/expression/inheritance/: advanced.h  core.h  interface.h
include/syntax/expression/memory/: draft.h
include/syntax/statement/: statement.h
src/: ast.c  codegen.c  convert.c  expression.c  lexer.l  main.c  parser.y  stack.c  statement.c  type.c
src/ast/: lookup.c  root.c  search.c  type.c
src/ast/type/: check.c  primitive.c  resolve.c  type.c
src/codegen/: codegen.c
src/language/: context.c  lexer.l  parser.y
src/language/native/: declaration.c  lexer.l  parser.y
src/misc/: convert.c  generic.c  string.c
src/parser/: context.c  lexer.l  mlexer.l  mparser.y  parser.y
src/syntax/declaration/: declaration.c
src/syntax/expression/: basic.c  binary.c  cast.c  complex.c  constant.c  constructor.c  number.c  operator.c  postfix.c  unary.c
targets/: windows.ini
